k8s/deployment-template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hike-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hike
  template:
    metadata:
      labels:
        app: hike
    spec:
      containers:
        - image: lucasahj/hike #to be changed
          name: hike
          ports:
            - containerPort: 8080
              name: server
          #livenessProbe:
            #httpGet:
              #path: /health/live
              #port: server
            #initialDelaySeconds: 20
            #periodSeconds: 3
          #readinessProbe:
            #httpGet:
              #path: /health/ready
              #port: server
            #initialDelaySeconds: 20
            #periodSeconds: 3

---

apiVersion: v1
kind: Service
metadata:
  name: hike
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      protocol: TCP
      targetPort: server
  selector:
    app: hike
