k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /hike(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: hike
                port:
                  number: 8080
          - path: /hiker(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: pohodnik
                port:
                  number: 8082
          - path: /location(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: location
                port:
                  number: 8085
          - path: /weather(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: weather
                port:
                  number: 8084
